plugins {
    id "idea"
    id "eclipse"
    id "java"
    id "antlr"
    id "application"
}

compileJava {
    sourceCompatibility = 17
    targetCompatibility = 17
}

application {
    mainClass = 'definelang.Interpreter'
}

repositories {
    mavenCentral()
}

dependencies {
    antlr "org.antlr:antlr4:4.13.2"
}

run {
    standardInput = System.in
}

generateGrammarSource {
    arguments += ["-lib", "./grammars", "-no-listener", "-package", "definelang.parser; import static definelang.AST.*"]
}
